# SimpleChatApplication

./: README.md
realtimechat/: go.mod  index.html  main.go
realtimechat/messages/: messages.go
realtimechat/ui/: index.css  index.html  index.js
realtimechat/users/: users.go
rust/: Cargo.toml
rust/src/: ChatHistory.rs  client.rs  common.rs  server.rs
rustchatapp/: .gitignore  Cargo.toml
rustchatapp/src/: main.rs  messages.rs  users.rs
rustchatapp/ui/: index.css  index.html  index.js
